--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-dev": "webpack --env.dev --progress",
+    "build-prod": "webpack --env.prod --progress"
   },
   "author": "",
   "license": "ISC",
